--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.rtl.css">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
@@ -632,8 +632,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i
-                            class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -829,22 +828,22 @@
     <section class="Cards3Part my-5 NoAnim" id="Cards3Part">
         <div class="container-fluid">
 
-                <div class="row ">
-                    <div class="col-md-4 col-12">
-                        <div class="Card3">
-                            <img src="./images/3Cards 1.png" alt="">
-                        </div>
+            <div class="row ">
+                <div class="col-md-4 col-12">
+                    <div class="Card3">
+                        <img src="./images/3Cards 1.png" alt="">
                     </div>
-                    <div class="col-md-4 col-12">
-                        <div class="Card3">
-                            <img src="./images/3Cards 2.png" alt="">
-                        </div>
+                </div>
+                <div class="col-md-4 col-12">
+                    <div class="Card3">
+                        <img src="./images/3Cards 2.png" alt="">
                     </div>
-                    <div class="col-md-4 col-12">
-                        <div class="Card3">
-                            <img src="./images/3Cards 1.png" alt="">
-                        </div>
+                </div>
+                <div class="col-md-4 col-12">
+                    <div class="Card3">
+                        <img src="./images/3Cards 1.png" alt="">
                     </div>
+                </div>
             </div>
         </div>
     </section>
@@ -866,8 +865,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i
-                            class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -1541,8 +1539,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i
-                            class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2207,23 +2204,23 @@
     <!-- 3 cards Part 2-->
     <section class="Cards3Part my-5" id="Cards3Part">
         <div class="container-fluid">
-                <div class="row gx-0 gx-md-4">
-                    <div class="col-md-4 col-12">
-                        <div class="Card3">
-                            <img src="./images/3Cards 1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-6">
-                        <div class="Card3">
-                            <img src="./images/3Cards 2.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-6">
-                        <div class="Card3">
-                            <img src="./images/3Cards 1.png" alt="">
-                        </div>
+            <div class="row gx-0 gx-md-4">
+                <div class="col-md-4 col-12">
+                    <div class="Card3">
+                        <img src="./images/3Cards 1.png" alt="">
                     </div>
                 </div>
+                <div class="col-md-4 col-6">
+                    <div class="Card3">
+                        <img src="./images/3Cards 2.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-4 col-6">
+                    <div class="Card3">
+                        <img src="./images/3Cards 1.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -2241,8 +2238,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i
-                            class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2491,8 +2487,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i
-                            class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3195,8 +3190,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i
-                            class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3858,29 +3852,29 @@
     <!-- 3 cards Part 4-->
     <section class="Cards3Part my-5" id="Cards3Part4">
         <div class="container-fluid">
-                <div class="row gx-0 gx-md-4">
-                    <div class="col-md-4 col-6">
-                        <div class="Card3">
-                            <img src="./images/3Cards 1.png" alt="">
-                        </div>
+            <div class="row gx-0 gx-md-4">
+                <div class="col-md-4 col-6">
+                    <div class="Card3">
+                        <img src="./images/3Cards 1.png" alt="">
                     </div>
-                    <div class="col-md-4 col-6">
-                        <div class="Card3">
-                            <img src="./images/3Cards 2.png" alt="">
-                        </div>
+                </div>
+                <div class="col-md-4 col-6">
+                    <div class="Card3">
+                        <img src="./images/3Cards 2.png" alt="">
                     </div>
-                    <div class="col-md-4 col-6">
-                        <div class="Card3">
-                            <img src="./images/3Cards 1.png" alt="">
-                        </div>
+                </div>
+                <div class="col-md-4 col-6">
+                    <div class="Card3">
+                        <img src="./images/3Cards 1.png" alt="">
                     </div>
-                    <div class="d-md-none d-inline-block col-6">
-                        <div class="Card3">
-                            <img src="./images/3Cards 1.png" alt="">
-                        </div>
+                </div>
+                <div class="d-md-none d-inline-block col-6">
+                    <div class="Card3">
+                        <img src="./images/3Cards 1.png" alt="">
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- End 3 cards Part 4-->
@@ -3897,8 +3891,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6 ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i
-                            class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
