--- a/category.html
+++ b/category.html
@@ -1260,7 +1260,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1296,7 +1296,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1439,7 +1439,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1475,7 +1475,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1619,7 +1619,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1655,7 +1655,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1798,7 +1798,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1834,7 +1834,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -1976,7 +1976,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -2012,7 +2012,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -2156,7 +2156,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
@@ -2192,7 +2192,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <button class="AddToCart btn ms-4" type="button">أضف للسلة <i
+                            <button class="AddToCart btn" type="button">أضف للسلة <i
                                     class="fa-solid fa-plus"></i></button>
 
                         </div>
