--- a/refund.html
+++ b/refund.html
@@ -157,10 +157,11 @@
                                         <p class="card-title">essence <button class="btn trash float-end"><i
                                                     class="fa-solid fa-trash"></i></button>
                                             <br>
-                                        <p class="card-title-span">
-                                            ماسكرا اي لوف اكستريم كريزي فوليوم من ايسنس
+                                            <span class="card-title-span">
+                                                ماسكرا اي لوف اكستريم كريزي فوليوم من ايسنس
 
-                                        </p>
+                                            </span>
+
                                         </p>
                                         <div class="card CardPrice mb-1">
                                             <div class="row g-0">
@@ -207,10 +208,10 @@
                                         <p class="card-title">essence <button class="btn trash float-end"><i
                                                     class="fa-solid fa-trash"></i></button>
                                             <br>
-                                        <p class="card-title-span">
-                                            ماسكرا اي لوف اكستريم كريزي فوليوم من ايسنس
+                                            <span class="card-title-span">
+                                                ماسكرا اي لوف اكستريم كريزي فوليوم من ايسنس
 
-                                        </p>
+                                            </span>
                                         </p>
                                         <div class="card CardPrice mb-1">
                                             <div class="row g-0">
