--- a/category.html
+++ b/category.html
@@ -937,7 +937,7 @@
 
                 <!--categoryProduct-->
                 <div class="col-md-10 col-12 categoryProduct px-4">
-                    <div class="row mb-4 ">
+                    <div class="row mb-md-4   ">
                         <h3><b>الميكياج</b> <span class="float-end">
                                 <select class="form-select d-md-block d-none" aria-label="Default select example">
                                     <option selected>الأكثر شعبية</option>
@@ -1126,7 +1126,7 @@
                             </span>
                         </h3>
                     </div>
-                    <div class="row mb-4">
+                    <div class="row mb-md-4  ">
                         <div class="card col-md-2  col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto " alt="...">
@@ -1303,7 +1303,7 @@
                         </div>
 
                     </div>
-                    <div class="row mb-4">
+                    <div class="row mb-md-4  ">
                         <div class="card col-md-2 col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/7.png" class="card-img-top mx-auto " alt="...">
@@ -1483,7 +1483,7 @@
 
 
                     </div>
-                    <div class="row mb-4">
+                    <div class="row mb-md-4  ">
                         <div class="card col-md-2  col-6">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/2.png" class="card-img-top mx-auto " alt="...">
@@ -1662,7 +1662,7 @@
                         </div>
 
                     </div>
-                    <div class="row mb-4">
+                    <div class="row mb-md-4  ">
                         <div class="card col-md-2  col-6">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/2.png" class="card-img-top mx-auto " alt="...">
@@ -1840,7 +1840,7 @@
 
                         </div>
                     </div>
-                    <div class="row mb-4">
+                    <div class="row mb-md-4  ">
                         <div class="card col-md-2  col-6">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/2.png" class="card-img-top mx-auto " alt="...">
@@ -2020,7 +2020,7 @@
 
 
                     </div>
-                    <div class="row mb-4">
+                    <div class="row mb-md-4  ">
                         <div class="card col-md-2  col-6">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/2.png" class="card-img-top mx-auto " alt="...">
@@ -2201,7 +2201,7 @@
 
                     </div>
                     <!--Pagination-->
-                    <div class="row mb-4">
+                    <div class="row mb-md-4  ">
                         <nav aria-label="Page navigation example">
                             <ul class="pagination justify-content-center">
                                 <li class="page-item">
