--- a/category.html
+++ b/category.html
@@ -1159,7 +1159,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
                         </div>
                         <div class="card col-md-2 col-6 ">
                             <a href="product.html">
@@ -1193,7 +1193,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
                         </div>
                         <div class="card col-md-2  d-md-block d-none ">
                             <a href="product.html">
@@ -1227,7 +1227,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 d-md-block d-none">
@@ -1262,7 +1262,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 d-md-block d-none">
@@ -1298,7 +1298,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
 
@@ -1336,7 +1336,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 col-6 ">
@@ -1371,7 +1371,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 d-md-block d-none ">
@@ -1406,7 +1406,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 d-md-block d-none">
@@ -1441,7 +1441,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 d-md-block d-none">
@@ -1477,7 +1477,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
 
@@ -1516,7 +1516,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 col-6">
@@ -1551,7 +1551,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  d-md-block d-none ">
@@ -1586,7 +1586,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  me-md-2 d-md-block d-none">
@@ -1621,7 +1621,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 me-2 d-md-block d-none">
@@ -1657,7 +1657,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
 
@@ -1695,7 +1695,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 col-6">
@@ -1730,7 +1730,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  d-md-block d-none ">
@@ -1765,7 +1765,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  me-md-2 d-md-block d-none">
@@ -1800,7 +1800,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 me-2 d-md-block d-none">
@@ -1836,7 +1836,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                     </div>
@@ -1873,7 +1873,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 col-6">
@@ -1908,7 +1908,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  d-md-block d-none ">
@@ -1943,7 +1943,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  me-md-2 d-md-block d-none">
@@ -1978,7 +1978,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 me-2 d-md-block d-none">
@@ -2014,7 +2014,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
 
@@ -2053,7 +2053,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 col-6">
@@ -2088,7 +2088,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  d-md-block d-none ">
@@ -2123,7 +2123,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2  me-md-2 d-md-block d-none">
@@ -2158,7 +2158,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
                         <div class="card col-md-2 me-2 d-md-block d-none">
@@ -2194,7 +2194,7 @@
                                 </div>
                             </a>
                             <button class="AddToCart btn" type="button">أضف للسلة <i
-                                    class="fa-solid fa-plus"></i></button>
+                                    class="fa-solid fa-plus float-end"></i></button>
 
                         </div>
 
