--- a/Brand.html
+++ b/Brand.html
@@ -1158,7 +1158,7 @@
                         </span>
                         </h3>
                     </div>
-                    <div class="row mb-4">
+                    <div class="row mb-4 NoAnim NoBigAnim  ">
                         <div class="card col-md-3  col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
@@ -1227,7 +1227,7 @@
 
                     </div>
 
-                    <div class="row mb-4">
+                    <div class="row mb-4 NoAnim AnimatedRow">
                         <div class="card col-md-3  col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
@@ -1296,7 +1296,7 @@
 
                     </div>
 
-                    <div class="row mb-4">
+                    <div class="row mb-4 AnimatedRow">
                         <div class="card col-md-3  col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
