--- a/Brand.html
+++ b/Brand.html
@@ -936,7 +936,7 @@
                 </div>
 
                 <!--categoryProduct-->
-                <div class="col-md-10 col-12 categoryProduct px-4">
+                <div class="col-md-9 col-12 categoryProduct px-4">
                     <div class="row mb-4 text-center">
                         <span class="float-end">
 
@@ -1158,7 +1158,7 @@
                         </span>
                         </h3>
                     </div>
-                    <div class="row mb-4 NoAnim NoBigAnim  ">
+                    <div class="row mb-4  ">
                         <div class="card col-md-3  col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
@@ -1227,7 +1227,7 @@
 
                     </div>
 
-                    <div class="row mb-4 NoAnim AnimatedRow">
+                    <div class="row mb-4 ">
                         <div class="card col-md-3  col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
@@ -1296,7 +1296,7 @@
 
                     </div>
 
-                    <div class="row mb-4 AnimatedRow">
+                    <div class="row mb-4 ">
                         <div class="card col-md-3  col-6 ">
                             <a href="product.html">
                                 <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
@@ -1367,6 +1367,7 @@
 
 
                 </div>
+                <div class="col-md-1 d-none d-md-block"></div>
             </div>
         </div>
     </section>
