--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         </div>
     </nav>
     <input type="search" placeholder="إبحث" class="m-0 w-100 px-3 py-2 hiddenSearch d-md-none">
-    <nav class="navbar d-md-block d-none">
+    <nav class="navbar d-md-flex d-none">
         <div class="container">
             <div class="row px-2 px-md-0">
                 <div class="col-2">
