--- a/product.html
+++ b/product.html
@@ -12,11 +12,11 @@
 </head>
 
 <body class="productBody">
-   <!--Navbar-->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex pt-3">
+  <!--Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex pt-3">
     <div class="container ">
 
-        <button class="btn btn-primary d-md-none d-block SideBar" type="button" data-bs-toggle="offcanvas"
+        <button class="btn btn-primary d-md-none d-flex SideBar" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> <i class="fa-solid fa-bars"></i>
         </button>
 
@@ -589,6 +589,7 @@
     </div>
 </nav>
 <!--End Navbar-->
+
 
 
 
